fixed at school

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+@font-face {
+  font-family: 'josefin sans';
+  src: url('assets/fonts/JosefinSans-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'hind siliguri';
+  src: url('assets/fonts/HindSiliguri.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'anton';
+  src: url('assets/fonts/Anton-Regular.ttf') format('truetype');
+}
 @tailwind base;
 
 @tailwind components;
